[gd_scene load_steps=5 format=3 uid="uid://biqahnw6lv4fx"]

[ext_resource type="Script" uid="uid://kvaq3yhkghi1" path="res://controls.gd" id="1_gf1nm"]
[ext_resource type="FontFile" uid="uid://d3xret8asdeg6" path="res://fonts/Xolonium-Regular.ttf" id="2_t27u3"]

[sub_resource type="InputEventAction" id="InputEventAction_qo8cm"]
action = &"pause"

[sub_resource type="Shortcut" id="Shortcut_xwvqn"]
events = [SubResource("InputEventAction_qo8cm")]

[node name="Controls" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_gf1nm")

[node name="ControlLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_right = 240.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_t27u3")
theme_override_font_sizes/font_size = 72
text = "Controls"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsLabel" type="Label" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -240.0
offset_right = 530.0
offset_bottom = -90.0
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_t27u3")
theme_override_font_sizes/font_size = 64
text = "Movement"
horizontal_alignment = 1
vertical_alignment = 1

[node name="KeysLabel" type="Label" parent="ButtonsLabel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 45.0
offset_right = 480.0
offset_bottom = 270.0
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_t27u3")
theme_override_font_sizes/font_size = 60
text = "W
A   S   D
(or arrow keys)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsLabel2" type="Label" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -530.0
offset_top = -240.0
offset_right = -50.0
offset_bottom = -90.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_t27u3")
theme_override_font_sizes/font_size = 64
text = "Abilities"
horizontal_alignment = 1
vertical_alignment = 1

[node name="KeysLabel2" type="Label" parent="ButtonsLabel2"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -480.0
offset_top = 28.5
offset_bottom = 281.5
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_t27u3")
theme_override_font_sizes/font_size = 50
text = "Shoot - Left Click
Dash - Shift
Ultimate - Space"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -170.0
offset_right = 125.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_t27u3")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_xwvqn")
text = "Back"

[connection signal="pressed" from="BackButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
